--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,3 +1,26 @@
-- clean: []
-- link: {}
-- shell: []
+- defaults:
+    link:
+      create: true
+      relink: true
+
+- clean: ["~"]
+- link:
+    ~/.dotfiles: ""
+    ~/.shell:
+    ~/.vim:
+    ~/.zsh:
+    ~/.p10k.zsh:
+    ~/.vimrc:
+    ~/.zshrc:
+      force: true
+    # ~/.gitconfig:
+    # ~/.gitconfig.local:
+    # ~/.gitignore:
+- shell:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive
+    - >
+      git clean -fdx
+      shell/plugins/
+      vim/pack/vendor/start/
+      zsh/plugins/
