--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,9 +18,9 @@
     # ~/.gitignore:
 - shell:
     - git submodule sync --recursive
-    - git submodule update --init --force --remote
-    - >
-      git clean -fdx
-      shell/plugins/
-      vim/pack/vendor/start/
-      zsh/plugins/
+    - git submodule update --init --recursive --force --remote
+    # - >
+    #   git clean -fdx
+    #   shell/plugins/
+    #   vim/pack/vendor/start/
+    #   zsh/plugins/
