--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,6 +8,7 @@
     ~/.dotfiles: ""
     ~/.shell:
     ~/.vim:
+    ~/.oh-my-zsh/custom/plugins:zsh/plugins
     ~/.zsh:
     ~/.p10k.zsh:
     ~/.vimrc:
@@ -17,6 +18,7 @@
     # ~/.gitconfig.local:
     # ~/.gitignore:
 - shell:
+    - chsh $(which zsh)
     - git submodule sync --recursive
     - git submodule update --init --recursive --force --remote
     # - >
