--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -8,7 +8,9 @@
     ~/.dotfiles: ""
     ~/.shell:
     ~/.vim:
-    ~/.oh-my-zsh/custom/plugins: zsh/plugins
+    ~/.oh-my-zsh/custom/plugins:
+      force: true
+      path: zsh/plugins
     ~/.zsh:
     ~/.p10k.zsh:
     ~/.vimrc:
@@ -18,7 +20,7 @@
     # ~/.gitconfig.local:
     # ~/.gitignore:
 - shell:
-    - chsh $(which zsh)
+    - chsh -s $(which zsh) $(whoami)
     - git submodule sync --recursive
     - git submodule update --init --recursive --force --remote
     # - >
