--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,9 @@
     ~/.oh-my-zsh/custom/plugins:
       force: true
       path: zsh/plugins
+    ~/.oh-my-zsh/custom/themes:
+      force: true
+      path: zsh/themes
     ~/.zsh:
     ~/.p10k.zsh:
     ~/.vimrc:
