--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -20,4 +20,5 @@
     ~/.zshrc:
       force: true
 - shell:
-    - chsh -s $(which zsh) $(whoami)
+    - git submodule sync --recursive
+    - git submodule update --init --recursive --force --remote
