--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -10,4 +10,5 @@
     ~/.zshrc:
       force: true
 - shell:
+    - sh -c "$(curl -fsSL https://raw.github.com/ohmyzsh/ohmyzsh/master/tools/install.sh)"
     - chsh -s $(which zsh) $(whoami)
