--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -9,5 +9,6 @@
     ~/.p10k.zsh:
     ~/.zshrc:
       force: true
-- shell:
-    - chsh -s $(which zsh) $(whoami)
+    ~/.oh-my-zsh:
+      force: true
+      path: zsh/omz
