--- a/meta/configs/git.yaml
+++ b/meta/configs/git.yaml
@@ -2,6 +2,7 @@
     ~/.gitconfig:
     ~/.gitconfig.local:
 - shell:
-    - command: [read git_email && sed -e "s/AUTHOREMAIL/$git_email/g" gitconfig.local, Reading git email]
+    - command: read git_email && sed -i "s/AUTHOREMAIL/$git_email/g" gitconfig.local
       stdin: true
       description: What email do you want to use for Git?
+      quiet: true
