--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -1,11 +1,13 @@
 - link:
     ~/.oh-my-zsh: zsh/omz
-    ~/.oh-my-zsh/custom/plugins:
+    ~/.oh-my-zsh/custom/plugins/:
       force: true
-      path: zsh/plugins
-    ~/.oh-my-zsh/custom/themes:
+      glob: true
+      path: zsh/plugins/*
+    ~/.oh-my-zsh/custom/themes/:
       force: true
-      path: zsh/themes
+      glob: true
+      path: zsh/themes/*
     ~/.zsh:
     ~/.p10k.zsh:
     ~/.zshrc:
