feat(Macos): Updating things to work on a mac

--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -1,5 +1,6 @@
 cask_args appdir: '/Applications'
 
+tap 'homebrew/cask-fonts'
 tap 'homebrew/bundle'
 
 brew 'ack'
@@ -18,12 +19,9 @@ cask 'font-fira-code'
 cask 'beyond-compare'
 cask 'ccleaner'
 cask 'docker'
-cask 'dotnet-sdk'
 cask 'enpass'
 cask 'firefox'
 cask 'insomnia'
-cask 'google-chrome'
-cask 'kap'
 cask 'krisp'
 cask 'microsoft-edge'
 cask 'open-in-code'
