--- a/meta/configs/homebrew.yaml
+++ b/meta/configs/homebrew.yaml
@@ -2,4 +2,7 @@
     ~/Brewfile: macos/Brewfile
 
 - shell:
-    - brew bundle
+    - 
+      command: brew bundle --file ~/Brewfile
+      stdout: true
+      stderr: true
