--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,8 @@
       path: zsh/omz
     ~/.zsh:
     ~/.p10k.zsh:
+    ~/.profile:
+    ~/.zprofile:
     ~/.vimrc:
     ~/.zshrc:
       force: true
