--- a/meta/base.yaml
+++ b/meta/base.yaml
@@ -1,9 +1,10 @@
+# expected to be ran after ./install
+
 - defaults:
     link:
       create: true
       relink: true
 
-- clean: [
-    '~',
-    '~/.config'
-]
+- shell:
+    - git submodule sync --recursive
+    - git submodule update --init --recursive --force --remote
