--- a/meta/configs/git-mac.yaml
+++ b/meta/configs/git-mac.yaml
@@ -1,8 +1,7 @@
 - link:
     ~/.gitconfig:
-    ~/.gitconfig.local:
 - shell:
-    - command: read git_email && sed -i '' "s/AUTHOREMAIL/$git_email/g" gitconfig.local
+    - command: read git_email && sed -i '' "s/AUTHOREMAIL/$git_email/g" gitconfig
       stdin: true
       description: What email do you want to use for Git?
       quiet: true
